--- a/day23_accept_the_perceptron/dense_layer.ipynb
+++ b/day23_accept_the_perceptron/dense_layer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "source": [
     "import tensorflow as tf"
    ],
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "source": [
     "mnist = tf.keras.datasets.mnist\r\n",
     "#load dataset, tulisan tangan digit dari 0 sampai 9 (mnist namanya)\r\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "source": [
     "x_train[12]"
    ],
@@ -118,14 +118,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 19
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "source": [
     "#wkwkkw yaudah kita gambar aja kali ya\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -151,262 +151,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "source": [
     "#data kita reshape dulu, biar gampang komputer cerna nya\r\n",
     "\r\n",
-    "# x_train=x_train.reshape(60000,28,28,1)\r\n",
-    "# x_test=x_test.reshape(10000,28,28,1)\r\n",
-    "# x_train=x_train/255.0\r\n",
-    "# x_test=x_test/255.0"
+    "x_train=x_train.reshape(60000,28,28,1)\r\n",
+    "x_test=x_test.reshape(10000,28,28,1)\r\n",
+    "x_train=x_train/255.0\r\n",
+    "x_test=x_test/255.0"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "source": [
-    "# Parameters \r\n",
-    "learning_rate = 0.001 \r\n",
-    "training_epochs = 20 \r\n",
-    "batch_size = 100 \r\n",
-    "display_step = 1 \r\n"
+    " #deklarasi model\r\n",
+    "model = tf.keras.models.Sequential([\r\n",
+    "            tf.keras.layers.Flatten(input_shape=(28,28)),\r\n",
+    "            tf.keras.layers.Dense(128, activation='relu'),\r\n",
+    "            tf.keras.layers.Dense(10, activation='softmax')\r\n",
+    "    ])"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "source": [
-    "# Network Parameters\r\n",
-    "n_hidden_1 = 256 # 1st layer number of neurons\r\n",
-    "n_hidden_2 = 256 # 2nd layer number of neurons\r\n",
-    "n_input = 784 # MNIST data input (img shape: 28*28)\r\n",
-    "n_classes = 10 # MNIST total classes (0-9 digits)"
+    "#compile model\r\n",
+    "model.compile(optimizer='adam', loss=tf.keras.losses.SparseCategoricalCrossentropy(), metrics=['acc'])"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "source": [
-    "# tf Graph input\r\n",
-    "X = tf.placeholder(\"float\", [None, n_input])\r\n",
-    "Y = tf.placeholder(\"float\", [None, n_classes])"
+    "#Training model\r\n",
+    "model.fit(x_train,y_train,\r\n",
+    "         epochs=15,\r\n",
+    "         validation_data=(x_test,y_test)\r\n",
+    "    )"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "module 'tensorflow' has no attribute 'placeholder'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-ab1869780ef9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# tf Graph input\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplaceholder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"float\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_input\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mY\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplaceholder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"float\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_classes\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'placeholder'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Epoch 1/15\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2544 - acc: 0.9293 - val_loss: 0.1358 - val_acc: 0.9580\n",
+      "Epoch 2/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.1111 - acc: 0.9666 - val_loss: 0.1033 - val_acc: 0.9674\n",
+      "Epoch 3/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0765 - acc: 0.9766 - val_loss: 0.0800 - val_acc: 0.9748\n",
+      "Epoch 4/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0578 - acc: 0.9824 - val_loss: 0.0779 - val_acc: 0.9767\n",
+      "Epoch 5/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0448 - acc: 0.9862 - val_loss: 0.0749 - val_acc: 0.9766\n",
+      "Epoch 6/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0353 - acc: 0.9890 - val_loss: 0.0749 - val_acc: 0.9760\n",
+      "Epoch 7/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0291 - acc: 0.9908 - val_loss: 0.0744 - val_acc: 0.9790\n",
+      "Epoch 8/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0237 - acc: 0.9924 - val_loss: 0.0723 - val_acc: 0.9790\n",
+      "Epoch 9/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0194 - acc: 0.9941 - val_loss: 0.0808 - val_acc: 0.9778\n",
+      "Epoch 10/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0154 - acc: 0.9952 - val_loss: 0.0835 - val_acc: 0.9784\n",
+      "Epoch 11/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0133 - acc: 0.9961 - val_loss: 0.0901 - val_acc: 0.9780\n",
+      "Epoch 12/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0122 - acc: 0.9960 - val_loss: 0.0967 - val_acc: 0.9742\n",
+      "Epoch 13/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0092 - acc: 0.9973 - val_loss: 0.0909 - val_acc: 0.9760\n",
+      "Epoch 14/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0091 - acc: 0.9970 - val_loss: 0.1066 - val_acc: 0.9762\n",
+      "Epoch 15/15\n",
+      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0090 - acc: 0.9970 - val_loss: 0.0966 - val_acc: 0.9773\n"
      ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "source": [
-    "# Store layers weight & bias\r\n",
-    "weights = {\r\n",
-    "    'h1': tf.Variable(tf.random_normal([n_input, n_hidden_1])),\r\n",
-    "    'h2': tf.Variable(tf.random_normal([n_hidden_1, n_hidden_2])),\r\n",
-    "    'out': tf.Variable(tf.random_normal([n_hidden_2, n_classes]))\r\n",
-    "}\r\n",
-    "biases = {\r\n",
-    "    'b1': tf.Variable(tf.random_normal([n_hidden_1])),\r\n",
-    "    'b2': tf.Variable(tf.random_normal([n_hidden_2])),\r\n",
-    "    'out': tf.Variable(tf.random_normal([n_classes]))\r\n",
-    "}"
-   ],
-   "outputs": [
+    },
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "module 'tensorflow' has no attribute 'random_normal'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-dbe5755dad70>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Store layers weight & bias\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m weights = {\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[1;34m'h1'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom_normal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn_input\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_hidden_1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;34m'h2'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom_normal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn_hidden_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_hidden_2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;34m'out'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom_normal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn_hidden_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_classes\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'random_normal'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x18462b94940>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "source": [
-    "# Create model\r\n",
-    "def multilayer_perceptron(x):\r\n",
-    "    # Hidden fully connected layer with 256 neurons\r\n",
-    "    layer_1 = tf.add(tf.matmul(x, weights['h1']), biases['b1'])\r\n",
-    "    # Hidden fully connected layer with 256 neurons\r\n",
-    "    layer_2 = tf.add(tf.matmul(layer_1, weights['h2']), biases['b2'])\r\n",
-    "    # Output fully connected layer with a neuron for each class\r\n",
-    "    out_layer = tf.matmul(layer_2, weights['out']) + biases['out']\r\n",
-    "    return out_layer"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# Construct model\r\n",
-    "logits = multilayer_perceptron(X)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# weights layer 1 \r\n",
-    "h = tf.Variable(tf.random_normal([n_input, n_hidden_1])) # bias layer 1 \r\n",
-    "bias_layer_1 = tf.Variable(tf.random_normal([n_hidden_1])) \r\n",
-    "# layer 1 \r\n",
-    "layer_1 = tf.nn.sigmoid(tf.add(tf.matmul(x, h), bias_layer_1)) \r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# weights layer 2 \r\n",
-    "w = tf.Variable(tf.random_normal([n_hidden_1, n_hidden_2])) "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# bias layer 2 \r\n",
-    "bias_layer_2 = tf.Variable(tf.random_normal([n_hidden_2])) "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# layer 2 \r\n",
-    "layer_2 = tf.nn.sigmoid(tf.add(tf.matmul(layer_1, w), bias_layer_2)) "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# weights output layer \r\n",
-    "output = tf.Variable(tf.random_normal([n_hidden_2, n_classes])) "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# biar output layer \r\n",
-    "bias_output = tf.Variable(tf.random_normal([n_classes])) \r\n",
-    "# output layer \r\n",
-    "output_layer = tf.matmul(layer_2, output) + bias_output\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# cost function \r\n",
-    "cost = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(\r\n",
-    "   logits = output_layer, labels = y)) "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "#cost = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(output_layer, y)) \r\n",
-    "# optimizer \r\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate = learning_rate).minimize(cost) \r\n",
-    "# optimizer = tf.train.GradientDescentOptimizer(\r\n",
-    "#   learning_rate = learning_rate).minimize(cost) "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# Plot settings \r\n",
-    "avg_set = [] \r\n",
-    "epoch_set = [] "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# Launch the graph \r\n",
-    "with tf.Session() as sess: \r\n",
-    "   sess.run(init) \r\n",
-    "   \r\n",
-    "   # Training cycle\r\n",
-    "   for epoch in range(training_epochs): \r\n",
-    "      avg_cost = 0. \r\n",
-    "      total_batch = int(mnist.train.num_examples / batch_size) \r\n",
-    "      \r\n",
-    "      # Loop over all batches \r\n",
-    "      for i in range(total_batch): \r\n",
-    "         batch_xs, batch_ys = mnist.train.next_batch(batch_size) \r\n",
-    "         # Fit training using batch data \r\n",
-    "         sess.run(optimizer, feed_dict = {x: batch_xs, y: batch_ys}) \r\n",
-    "         # Compute average loss \r\n",
-    "         avg_cost += sess.run(cost, feed_dict = {x: batch_xs, y: batch_ys}) / total_batch\r\n",
-    "      # Display logs per epoch step \r\n",
-    "      if epoch % display_step == 0: \r\n",
-    "         print(\"Epoch:\", '%04d' % (epoch + 1), \"cost=\", \"{:.9f}\".format(avg_cost))\r\n",
-    "      avg_set.append(avg_cost) \r\n",
-    "      epoch_set.append(epoch + 1)\r\n",
-    "   print(\"Training phase finished\" )\r\n",
-    "\r\n",
-    "   plt.plot(epoch_set, avg_set, 'o', label = 'MLP Training phase') \r\n",
-    "   plt.ylabel('cost') \r\n",
-    "   plt.xlabel('epoch') \r\n",
-    "   plt.legend() \r\n",
-    "   plt.show() \r\n",
-    "   correct_prediction = tf.equal(tf.argmax(output_layer, 1), tf.argmax(y, 1)) \r\n",
-    "   accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\")) \r\n",
-    "   print(\"Model Accuracy:\", accuracy.eval({x: mnist.test.images, y: mnist.test.labels}))"
-   ],
-   "outputs": [],
    "metadata": {}
   }
  ],
